--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -4,10 +4,10 @@
 {% block pagecontent %}
     <div class="left_filter">
         <div class="panel panel-primary">
-            <div class="panel-heading">选手赛区</div>
+            <div class="panel-heading">赛区</div>
             <div class="panel-body">
-                <ul>
-                    <li><a href="#" class="active">全选</a></li>
+                <ul class="league">
+                    <li><a href="#" class="active">全部</a></li>
                     <li><a href="#">LPL</a></li>
                     <li><a href="#">LCK</a></li>
                     <li><a href="#">LMS</a></li>
@@ -17,21 +17,24 @@
             </div>
         </div>
         <div class="panel panel-primary">
-            <div class="panel-heading">选手国籍</div>
+            <div class="panel-heading">选手-国家/地区</div>
             <div class="panel-body">
-                <ul>
-                    <li><a href="#">全选</a></li>
-                    <li><a href="#" class="active">中国</a></li>
+                <ul class="country">
+                    <li><a href="#" class="active">全部</a></li>
+                    <li><a href="#">中国</a></li>
                     <li><a href="#">韩国</a></li>
+                    <li><a href="#">台湾</a></li>
+                    <li><a href="#">美国</a></li>
+                    <li><a href="#">越南</a></li>
                     <li><a href="#">其他</a></li>
                 </ul>
             </div>
         </div>
         <div class="panel panel-primary">
-            <div class="panel-heading">选手战队</div>
+            <div class="panel-heading">战队</div>
             <div class="panel-body">
-                <ul>
-                    <li><a href="#" class="active">全选</a></li>
+                <ul class="team">
+                    <li><a href="#" class="active">全部</a></li>
                     <li><a href="#">EDG</a></li>
                     <li><a href="#">RNG</a></li>
                     <li><a href="#">IM</a></li>
@@ -47,14 +50,14 @@
             </div>
         </div>
         <div class="panel panel-primary">
-            <div class="panel-heading">选手位置</div>
+            <div class="panel-heading">位置</div>
             <div class="panel-body">
-                <ul>
-                    <li><a href="#">全选</a></li>
+                <ul class="place">
+                    <li><a href="#" class="active">全部</a></li>
                     <li><a href="#">上路</a></li>
                     <li><a href="#">打野</a></li>
-                    <li><a href="#">中路</a></li>
-                    <li><a href="#" class="active">ADC</a></li>
+                    <li><a href="#">中单</a></li>
+                    <li><a href="#">ADC</a></li>
                     <li><a href="#">辅助</a></li>
                     <li><a href="#">路人</a></li>
                 </ul>
