--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -65,76 +65,20 @@
         </div>
     </div>
     <div class="player_list">
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">LOOPER</a>
+        {% for item in query_data %}
+            {% if item.player_name!='路人' %}
+                <div class="col-sm-6 col-md-2">
+                    <div class="thumbnail">
+                        <a href="#" class="thumbnail">
+                            <img src="{{ url_for('static',filename='img/player/'~item.player_name~'.png') }}" alt="..." width="100" height="100">
+                        </a>
+                        <div class="caption">
+                            <a href="#">{{ item.player_name }}</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
-                </a>
-                <div class="caption">
-                    <a href="#">UZI</a>
-                </div>
-            </div>
-        </div>
+            {% endif %}
+        {% endfor %}
     </div>
     <div class="table-responsive table-ladder table_style">
         <table class="table table-stripped table-hover">
