--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -66,20 +66,24 @@
     </div>
     <div class="player_list">
         {% for item in img_query_data %}
-            {% if item.player_name !='路人' %}
-                <div class="col-sm-6 col-md-2">
-                    <div class="thumbnail">
-                        <a href="#" class="thumbnail">
-                            <img src="{{ url_for('static',filename='img/player/'~item.player_name~'.png') }}" alt="..." width="100" height="100">
-                        </a>
-                        <div class="caption">
-                            <a href="#">{{ item.player_name }}</a>
-                        </div>
+            <div class="col-sm-6 col-md-2">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="{{ url_for('static',filename='img/player/'~item.player_name~'.png') }}" alt="..." width="100" height="100">
+                    </a>
+                    <div class="caption">
+                        <a href="#">{{ item.player_name }}</a>
                     </div>
                 </div>
-            {% endif %}
+            </div>
         {% endfor %}
     </div>
+    <nav class="nav-pager">
+        <ul class="pager">
+            <li class="backward disabled"><a href="#">上一页</a></li>
+            <li class="forward"><a href="#">下一页</a></li>
+        </ul>
+    </nav>
     <div class="table-responsive table-ladder table_style">
         <table class="table table-stripped table-hover">
             <thead>
