initial help page

--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% set active_page = 'help' -%}
-{% block title%}&nbsp;&nbsp;&nbsp;参与-撸韩服{% endblock %}
+{% block title%}&nbsp;&nbsp;&nbsp;贡献本站-撸韩服{% endblock %}
 {% block pagecontent %}
-            <div class="container">
-                <h1>撸韩服-参与</h1>
-            </div>
 {% endblock %}
