--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
     ('/', 'index', '首页'),
     ('/ladder', 'ladder', '天梯'),
     ('/query', 'query', '查询'),
-    ('/help','help','参与')
+    ('/help','help','贡献本站')
     ] -%}
     {% set active_page = active_page|default('index') -%}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
