add anime vision effect on tab clicking

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -204,7 +204,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="fuzhu">
+            <div class="tab-pane fade" id="fuzhu">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -247,7 +247,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="zhongdan">
+            <div class="tab-pane fade" id="zhongdan">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -290,7 +290,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="daye">
+            <div class="tab-pane fade" id="daye">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -333,7 +333,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="shangdan">
+            <div class="tab-pane fade" id="shangdan">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -437,7 +437,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="RNG">
+            <div class="tab-pane fade" id="RNG">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -479,7 +479,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="IM">
+            <div class="tab-pane fade" id="IM">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -521,7 +521,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="SKT">
+            <div class="tab-pane fade" id="SKT">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -563,7 +563,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="ROX">
+            <div class="tab-pane fade" id="ROX">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -605,7 +605,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="SSG">
+            <div class="tab-pane fade" id="SSG">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -647,7 +647,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="LGD">
+            <div class="tab-pane fade" id="LGD">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -689,7 +689,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="SS">
+            <div class="tab-pane fade" id="SS">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -731,7 +731,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="IG">
+            <div class="tab-pane fade" id="IG">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -773,7 +773,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="WE">
+            <div class="tab-pane fade" id="WE">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
@@ -815,7 +815,7 @@
                     <a class="btn btn-primary" href="{{ url_for('.query') }}" role="button">查看更多</a>
                 </div>
             </div>
-            <div class="tab-pane" id="OMG">
+            <div class="tab-pane fade" id="OMG">
                 <div class="table-responsive" align="center">
                     <table class="table table-stripped table-hover table-condensed">
                         <thead>
