--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% set active_page = 'help' -%}
-{% block title%}&nbsp;&nbsp;&nbsp;贡献本站-撸韩服{% endblock %}
+{% block title%}&nbsp;&nbsp;&nbsp;支持本站-撸韩服{% endblock %}
 {% block pagecontent %}
 {% endblock %}
