--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -1,5 +1,100 @@
 {% extends "base.html" %}
 {% set active_page = 'help' -%}
-{% block title%}&nbsp;&nbsp;&nbsp;支持本站-撸韩服{% endblock %}
+{% block title %}&nbsp;&nbsp;&nbsp;支持本站-撸韩服{% endblock %}
 {% block pagecontent %}
+    <div class="aboutsite">
+        <div class="page-header">
+            <h3>关于本站&nbsp;&nbsp;
+                <small>送给喜欢LOL并且关注韩服的召唤师</small>
+            </h3>
+        </div>
+        <ul>
+            <li>
+                <p>本站由站长shepherd利用业余时间在S6结束后建立，建立网站的目的在于方便像站长一样关注韩服的召唤师</p>
+                <p>锁定本站可以方便的以多种方式定位和查看职业战队以及路人人气选手在韩服的征战数据和排名</p>
+            <li>
+                <p>希望网友们着重关注LPL战队队员在韩服的表现，监督鼓励和鞭策他们努力训练、认真排位。站长是S1开始的一名老玩家，相信还有很多网友和我一样希望LPL能夺得一次S赛冠军，S6输了，S7再来！</p>
+            </li>
+            </li>
+            <li>
+                <p>站长承诺：网站由站长本人管理期间，本站永久不嵌入广告，且网站不用于盈利，经济所得全部用于网站建设</p>
+            </li>
+            <li>
+                <p>声明：网站全部游戏数据来源于网络爬取，账号数据来源于网络和网友提供，如有利益冲突请联系站长处理</p>
+            </li>
+            <li>
+                <p>由于站长精力和金钱有限，网站不足之处还望网友包容、海涵</p>
+            </li>
+        </ul>
+        <div class="page-header">
+            <h3>加入本站QQ群&nbsp;&nbsp;
+                <small>88888888</small>
+            </h3>
+            <ul>
+                <li>
+                    <p>加入QQ群可享受本站的永久免费访问，如果后期本站流量过大，服务器无法支撑，网站将只对群成员开放</p>
+                </li>
+                <li>
+                    <p>QQ群内拒绝喷子和智障粉，拒绝广告黄赌毒，欢迎理性讨论LOL、LPL、韩服、各大战队，另可欢乐开黑</p>
+                </li>
+                <li>
+                    <p>QQ群是唯一联系站长的途径，欢迎通过QQ群完善选手账号数据，对网站提供建议，报告BUG甚至提供赞助</p>
+                </li>
+                <li>
+                    <p>对于建站所用的爬虫、API、后台Flask、前端bootstrap感兴趣的朋友也可以通过QQ群联系站长</p>
+                </li>
+            </ul>
+        </div>
+        <div class="page-header">
+            <h3>支持本站</h3>
+            <ul>
+                <li>
+                    <p>不需要任何经济支出，加入QQ群8888888对网站提建议、报告BUG、完善选手账号数据</p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        赞助￥2.00/1小时网费，支持站长修复BUG
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        赞助￥3.00/1杯咖啡，支持站长撰写数据统计分析文章
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        赞助￥8.00/1盒烟，支持站长完成录像、OB、直播链接的采集展示以及实现其他新功能
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        赞助￥15.00/1部分域名、服务器、网络、CDN等升级和维护 费用
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        购买￥20.00/1个月网站LOGO，需为非攻击性素材，站长可协助制作，购买前务必先联系站长
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        购买￥30.00/1个月网站站名，需为非攻击性名称，购买前务必先联系站长
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <button type="button" class="btn btn-primary btn-sm">点我</button>
+                        作为土豪，随意又任性的打赏任意金额
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 {% endblock %}
