--- a/app/static/css/lolhf.css
+++ b/app/static/css/lolhf.css
@@ -180,3 +180,15 @@ hr.divider {
     clear: left;
     padding-top: 20px;
 }
+
+/*aboutsite*/
+.aboutsite {
+    padding-top: 20px;
+    padding-left: 50px;
+    width: 750px;
+}
+
+.aboutsite button{
+
+}
+
