--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -109,18 +109,23 @@
                     <p>请留下您的信息，录入赞助墙，供站长和网友膜拜：</p>
                     <form class="bs-example bs-example-form" role="form">
                         <div class="input-group">
-                            <span class="input-group-addon">根据地-网名</span>
-                            <input type="text" class="form-control" placeholder="如：背锅吧-ClearRun">
+                            <span class="input-group-addon">根据地</span>
+                            <input id="from" type="text" class="form-control" placeholder="如：背锅吧">
                         </div>
                         <br>
                         <div class="input-group">
-                            <span class="input-group-addon">服务器  名称</span>
-                            <input type="text" class="form-control" placeholder="如：电信1-艾欧尼亚">
+                            <span class="input-group-addon">网名</span>
+                            <input id="name" type="text" class="form-control" placeholder="如：ClearRun">
                         </div>
                         <br>
                         <div class="input-group">
-                            <span class="input-group-addon">召唤师&nbsp;&nbsp;&nbsp;I D</span>
-                            <input type="text" class="form-control" placeholder="如：UltFlash">
+                            <span class="input-group-addon">服务器名称</span>
+                            <input id="server" type="text" class="form-control" placeholder="如：电信1-艾欧尼亚">
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <span class="input-group-addon">召唤师ID</span>
+                            <input id="gameid" type="text" class="form-control" placeholder="如：UltFlash">
                         </div>
                     </form>
                 </div>
